changed styling and added daydream

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,8 +28,8 @@ const today = new Date();
 <style>
 	footer {
 		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
+		background: #1e1e2e;
+		color: #b4befe;
 		text-align: center;
 	}
 	.social-links {
@@ -40,9 +40,9 @@ const today = new Date();
 	}
 	.social-links a {
 		text-decoration: none;
-		color: rgb(var(--gray));
+		color: #b4befe;
 	}
 	.social-links a:hover {
-		color: rgb(var(--gray-dark));
+		color: #bac2de;
 	}
 </style>
