--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,8 +41,8 @@ import HeaderLink from './HeaderLink.astro';
 </header>
 <style>
 	header {
+		background-color: #313244;
 		margin: 0;
-		padding: 0 1em;
 		background: white;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
@@ -53,20 +53,23 @@ import HeaderLink from './HeaderLink.astro';
 
 	h2 a,
 	h2 a.active {
+		color: #b4befe;
 		text-decoration: none;
 	}
 	nav {
+		background-color: #313244;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 	}
 	nav a {
 		padding: 1em 0.5em;
-		color: var(--black);
+		color: #b4befe;
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
 	}
 	nav a.active {
+		background-color: #313244;
 		text-decoration: none;
 		border-bottom-color: var(--accent);
 	}
