--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -41,9 +41,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				padding: 1em 0;
 				text-align: center;
 				line-height: 1;
+				color: #89b4fa;
 			}
 			.title h1 {
 				margin: 0 0 0.5em 0;
+				color: #89b4fa;
 			}
 			.date {
 				margin-bottom: 0.5em;
