--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const posts = (await getCollection('blog')).sort(
 			}
 			.title {
 				margin: 0;
-				color: rgb(var(--black));
+				color: #89b4fa;
 				line-height: 1;
 			}
 			.date {
@@ -64,7 +64,7 @@ const posts = (await getCollection('blog')).sort(
 			}
 			ul li a:hover h4,
 			ul li a:hover .date {
-				color: rgb(var(--accent));
+				color: #b4befe;
 			}
 			ul a:hover img {
 				box-shadow: var(--box-shadow);
