--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -81,6 +81,22 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 					</div>
 					<slot />
 				</div>
+				<script src="https://giscus.app/client.js"
+        data-repo="kashsuks/blog"
+        data-repo-id="R_kgDOQLsoiQ"
+        data-category="General"
+        data-category-id="DIC_kwDOQLsoic4CxY7T"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+			</script>
 			</article>
 		</main>
 		<Footer />
